[gd_scene load_steps=48 format=3 uid="uid://c37p04u3bt3wb"]

[ext_resource type="Script" path="res://enemy.gd" id="1_tlnii"]
[ext_resource type="Texture2D" uid="uid://50802xy7hedi" path="res://Asset/Character/Heavy Bandit/HeavyBandit.png" id="2_6cl5n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfkq0"]
size = Vector2(14, 36)

[sub_resource type="Animation" id="Animation_4v4he"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CloseDistanceArea/CloseCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:is_sliding")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:slide_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_ckbmm"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CloseDistanceArea/CloseCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:is_sliding")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:slide_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_yf5rh"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_p2nse"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_850ad"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_2sxa6"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkpgr"]
_data = {
"RESET": SubResource("Animation_4v4he"),
"attack": SubResource("Animation_ckbmm"),
"death": SubResource("Animation_yf5rh"),
"hurt": SubResource("Animation_p2nse"),
"idle": SubResource("Animation_850ad"),
"run": SubResource("Animation_2sxa6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbox5"]
size = Vector2(828, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ws63"]
size = Vector2(54, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jnne"]
size = Vector2(24, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8hur"]
size = Vector2(14, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ei2w"]
atlas = ExtResource("2_6cl5n")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhcxn"]
atlas = ExtResource("2_6cl5n")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_twbm4"]
atlas = ExtResource("2_6cl5n")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wasg"]
atlas = ExtResource("2_6cl5n")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kegs"]
atlas = ExtResource("2_6cl5n")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy32s"]
atlas = ExtResource("2_6cl5n")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_exait"]
atlas = ExtResource("2_6cl5n")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ub2r"]
atlas = ExtResource("2_6cl5n")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tn3o"]
atlas = ExtResource("2_6cl5n")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4xmi"]
atlas = ExtResource("2_6cl5n")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nurn"]
atlas = ExtResource("2_6cl5n")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvp10"]
atlas = ExtResource("2_6cl5n")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk1gj"]
atlas = ExtResource("2_6cl5n")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v25xj"]
atlas = ExtResource("2_6cl5n")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6df7a"]
atlas = ExtResource("2_6cl5n")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d73rr"]
atlas = ExtResource("2_6cl5n")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xofyq"]
atlas = ExtResource("2_6cl5n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2hgw"]
atlas = ExtResource("2_6cl5n")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uxax"]
atlas = ExtResource("2_6cl5n")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omxlj"]
atlas = ExtResource("2_6cl5n")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8das6"]
atlas = ExtResource("2_6cl5n")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7pn"]
atlas = ExtResource("2_6cl5n")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv3hf"]
atlas = ExtResource("2_6cl5n")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4vkt"]
atlas = ExtResource("2_6cl5n")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwm78"]
atlas = ExtResource("2_6cl5n")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_380eu"]
atlas = ExtResource("2_6cl5n")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uui2"]
atlas = ExtResource("2_6cl5n")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe64w"]
atlas = ExtResource("2_6cl5n")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v26f"]
atlas = ExtResource("2_6cl5n")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fka3m"]
atlas = ExtResource("2_6cl5n")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5qxt"]
atlas = ExtResource("2_6cl5n")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxgod"]
atlas = ExtResource("2_6cl5n")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_glyh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ei2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhcxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twbm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wasg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kegs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy32s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exait")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ub2r")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tn3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4xmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nurn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvp10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk1gj")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v25xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6df7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d73rr")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xofyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2hgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uxax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omxlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8das6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv3hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4vkt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwm78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_380eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uui2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe64w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v26f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fka3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5qxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxgod")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Infighter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_tlnii")
character_name = "in"
speed = 100
health = 100
attack_power = 10
slide_speed = 50

[node name="HealthBar" type="ProgressBar" parent="."]
layout_direction = 1
offset_left = -10.0
offset_right = 10.0
offset_bottom = 5.0
pivot_offset = Vector2(10, 0)
value = 20.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_xfkq0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gkpgr")
}
autoplay = "idle"

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_mbox5")

[node name="AttackDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionArea"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_0ws63")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(12, -26.5)
shape = SubResource("RectangleShape2D_4jnne")
disabled = true

[node name="CloseDistanceArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CloseCollisionShape2D" type="CollisionShape2D" parent="CloseDistanceArea"]
position = Vector2(7, -32.5)
shape = SubResource("RectangleShape2D_p8hur")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_glyh1")
animation = &"idle"
flip_h = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="body_exited" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="CloseDistanceArea" to="." method="_on_close_distance_area_body_entered"]
